# cosmological-constant-workbench

./: .gitignore  README.md  check_path.py  pyproject.toml
docs/: PROVENANCE.md  TASKS.md
examples/: demo_cmb_bao.py  demo_lqg_polymer.py  demo_lqg_polymer_vacuum.py  demo_lqg_predictor_constrained.py  demo_spin_foam_constrained.py  demo_spin_foam_vacuum.py
papers/: .gitignore
papers/lqg_cc_constraints/: .gitignore  README.md  build_paper.sh  generate_scan_data.py  lqg_cc_constraints.bib  lqg_cc_constraints.tex  paper.tex
papers/lqg_cc_constraints/data/: README.txt  scan_results.tsv
src/ccw/: COUPLED_ODE_FIX_PROPOSAL.md  COUPLED_ODE_STATUS.md  backreaction.py  cli_sweep.py  cmb_bao_observables.py  constraints.py  coupled_ode.py  integrations.py  likelihood.py  sweep.py
src/ccw/integrations/: base.py  lqg_constrained.py  lqg_predictor.py  lqg_predictor_sweep.py
src/ccw/mechanisms/: __init__.py  base.py  cpl.py  lqg_polymer.py  running_vacuum.py  sequestering.py  spin_foam_vacuum.py  unimodular.py
tests/: test_backreaction.py  test_cmb_bao_observables.py  test_constraints.py  test_coupled_ode.py  test_integrations.py  test_likelihood.py  test_lqg_constrained.py  test_lqg_polymer.py  test_lqg_polymer_vacuum.py  test_lqg_predictor_first_principles.py  test_mechanisms.py  test_spin_foam_vacuum.py  test_sweep.py
